add loading animation, add landscape layout

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
   </head>
 
   <body>
-    <div class="cursor">
+
+    <div class="loader">Loading...</div>
+
+    <div class="cursor hidden">
       <h1 class="cursor-inside">Click & hold</h1>
     </div>
 
@@ -72,7 +75,7 @@
       <h3>ART MUSEUM</h3>
     </div>
 
-    <div class="top-section">
+    <div class="top-section hidden">
 
       <div class="top-section__button hover">
         <div class="top-section__button__icon closed">
@@ -113,7 +116,7 @@
       </ul>
     </div>
 
-    <div class="page-container">
+    <div class="page-container hidden">
 
       <section class="about" id="distortion-text">
         <div class="about__content">
@@ -371,7 +374,7 @@
 
         <div class="contact__info-container">
           <h5>
-            <span class="hover">WEBSITE</span> DESIGNED AND DEVELOPED BY<br />
+            <span class="hover"><a href="https://github.com/kgrasewicz/Portfolio" target="_blank">WEBSITE</a></span> DESIGNED AND DEVELOPED BY<br />
             KASIA GRASEWICZ WITH COFFEE AND
             <div class="heart">
               <svg
