switch project images and change their styling

--- a/index.html
+++ b/index.html
@@ -63,17 +63,13 @@
       <h1 class="cursor-inside">Click & hold</h1>
     </div>
 
-    <div class="project-title project-title-1">
-      <h3>JEWELLERY STORE</h3>
-    </div>
+    <a class="project-title project-title-1">
+      <h3 onclick="location.href='https://google.com';">JEWELLERY STORE</h3>
+    </a>
 
-    <div class="project-title project-title-2">
-      <h3>FLIGHT SEARCH</h3>
-    </div>
-
-    <div class="project-title project-title-3">
-      <h3>ART MUSEUM</h3>
-    </div>
+    <a class="project-title project-title-2">
+      <h3>OSIOŁ NA TRANSPORT</h3>
+    </a>
 
     <div class="top-section hidden">
 
@@ -241,10 +237,10 @@
           <div class="title-1-indicator"></div>
 
           <div class="projects__project__img projects__project__img-1" data-scroll-speed="-50">
-            <img src="project-1.jpg" alt="" />
+            <img src="./graphics/blau1.png" alt="" />
           </div>
           <div class="projects__project__img projects__project__img-2">
-            <img src="project-2.jpg" alt="" />
+            <img src="./graphics/blau2.png"alt="" />
           </div>
 
           <div class="title-1-indicator-end"></div>
@@ -253,25 +249,14 @@
           <div class="title-2-indicator"></div>
 
           <div class="projects__project__img projects__project__img-1">
-            <img src="project-3.jpg" alt="" />
+            <img src="./graphics/osiol1.png" alt="" />
           </div>
           <div class="projects__project__img projects__project__img-2">
-            <img src="project-2.jpg" alt="" />
+            <img src="./graphics/osiol2.png" alt="" />
           </div>
           <div class="title-2-indicator-end"></div>
         </div>
 
-        <div class="projects__project projects__project-3 hover">
-          <div class="title-3-indicator"></div>
-
-          <div class="projects__project__img projects__project__img-1">
-            <img src="project-1.jpg" alt="" />
-          </div>
-          <div class="projects__project__img projects__project__img-2">
-            <img src="project-3.jpg" alt="" />
-          </div>
-          <div class="title-3-indicator-end"></div>
-        </div>
       </section>
 
       <section class="contact">
